Remove typewriter effect

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,25 +41,12 @@
     font-size: 2rem;
 }
 
-/* Hero title "typewriter" animation */
-.typewriter h2 {
-  overflow: hidden; /* Ensures the content is not revealed until the animation */
-  border-right: .15em solid rgb(255, 255, 255); /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  animation: 
-    typing 4s steps(30, end),
-    blink-caret .6s step-end infinite;
-}
-@keyframes typing {
-    from { width: 0 }
-    to { width: 100% }
-}
-@keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: rgb(255, 255, 255) }
-}
 
+
+/* **************************** */
+/* About                        */
+/* **************************** */
+ 
 
 
 /* **************************** */
@@ -79,7 +66,6 @@
 
 /* Cards */
 .card {
-    perspective: 1000px;
     transition: all 0.25s ease;
 }
 
@@ -120,7 +106,6 @@
 .card-flip:hover .card-back {
     transform: rotateY(0deg);
 }
-
 
 
 
