--- a/css/style.css
+++ b/css/style.css
@@ -115,13 +115,12 @@
 
 #footer {
     background-color: black;
-    height: 36px;
     text-align: center;
 }
 
 /* social media icons styling */
 .social-icons {
-    font-size: 20px;
+    font-size: 36px;
     cursor: pointer;
 }
 
@@ -130,5 +129,6 @@
 }
 
 .footerhover:hover {
-    color: rgb(23, 23, 23);
+    scale: 1.1;
+    transition: 0.3s;
 }	
